--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@
 # or operating system, you probably want to add a global ignore instead:
 #   git config --global core.excludesfile '~/.gitignore_global'
 
-/*/**/.DS_Store
+.DS_Store
 
 # Ignore bundler config.
 /.bundle
@@ -36,3 +36,5 @@
 /yarn-error.log
 yarn-debug.log*
 .yarn-integrity
+
+spec/examples.txt
