--- a/package.json
+++ b/package.json
@@ -6,9 +6,12 @@
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "4.3.0",
+    "autoprefixer": "^9",
     "jquery": "^3.5.1",
     "popper.js": "^1.16.1",
-    "semantic-ui-sass": "^2.4.2",
+    "postcss": "^7",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat",
+    "tailwindcss-multi-theme": "^1.0.4",
     "turbolinks": "^5.2.0"
   },
   "version": "0.1.0",
