--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "version": "0.1.0",
   "devDependencies": {
     "webpack-dev-server": "^3.11.2"
+  },
+  "resolutions": {
+    "graceful-fs": "^4.2.4"
   }
 }
