--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "4.3.0",
     "autoprefixer": "^9",
+    "easy-autocomplete": "^1.3.5",
     "jquery": "^3.5.1",
     "popper.js": "^1.16.1",
     "postcss": "^7",
