--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,10 @@
 /public/assets
 .byebug_history
 
+# Ignore notes
+/notes
+/notes/*
+
 # Ignore master key for decrypting credentials and more.
 /config/master.key
 
